<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/lineaLayaout">

        <!-- Logo de la app -->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="pokemon.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>


        <!-- Texto de la app -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:fontFamily="@font/worksans"
            android:layout_marginTop="15dp" />

        <!-- Botón Login-->
        <Button
            android:id="@+id/Btn_Login"
            style="@style/button_main"
            android:text="@string/Btn_Login"/>

        <!-- Botón Registro-->
        <Button
            android:id="@+id/Btn_Registro"
            style="@style/button_main"
            android:text="@string/Btn_Registro"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>